# Neuromorphic_research

./: README.md  conv_lif_neuron.ipynb  output_graph  ressources.md  simple_ann_model.ipynb
ANN_to_SNN_FPGA/: LIF_layer.py  LIF_layer_vizualization.ipynb  LIF_model.py  LIF_notebook_visualization.ipynb  SNN_Iris_from_ANN.ipynb  ressources.md  tox21_ann.ipynb
NoC_simulation/: CMakeLists.txt
NoC_simulation/include/neuron/: CUBA_LIF.cpp  CUBA_LIF.h
NoC_simulation/src/: main.cpp
NoC_topology_simulation/: 2D_mesh_topology.py  noc_constraints_simulation.json
SNN_with_STDP/: CUBA_LIF_layer.py  IF_layer.py  LIF_Sequential_layer.py  LIF_layer.py  SCNN2D.py  STDP.py  SpikePropRule.py  network_cuba_lif_spike_prop_learning.ipynb  neuron_model_comparison.ipynb  neuron_settings.json  snn_training_stdp.ipynb
SNN_with_STDP/encoding/: rate_coding.py
snn/LIF_model/: LIF_network_model_iris_dataset.ipynb  LIF_simple_neuron.ipynb  SNNLayer.py  W_input_layer.npy  W_output_layer.npy
